# Aletix

./: .bazelrc  .envrc  .gitignore  BUILD  MODULE.bazel  aletix.iso  flake.nix  shell.nix
arch/x86/: BUILD
arch/x86/boot/: BUILD  limine_main.c  linker.ld
arch/x86/include/: limine.h
bazel/: BUILD  defs.bzl  preset.bazelrc
bazel/extensions/: archives.bzl  packages.bzl  repositories.bzl
bazel/extensions/archives/: limine.bzl
bazel/extensions/nix/: cc_toolchains.bzl  packages.bzl
bazel/extensions/nix/cc/: host.nix  x86_64-elf.nix
bazel/extensions/repos/: limine.bzl
bazel/rules/: cc_link.bzl  cc_object.bzl  defs.bzl
include/: BUILD
scripts/: BUILD  limine.conf  run_qemu.sh
scripts/nix/: configuration.nix
